--- a/visibility.html
+++ b/visibility.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   <style>
+        .box{
+     border: 1px solid black;   
+     width: 100px;
+     height: 100px;
+     margin-bottom: 10px;
+
+    }
+    #box-1{
+        background-color:aqua;
+    }
+    #box-2{
+        background-color:rgb(99, 51, 230);
+    }
+    #box-3{
+        background-color:rgb(255, 0, 242);
+        /* display none dosen't take up space on the page */
+        
+        /* display: none; */
+
+
+        /* visibility hidden take up space on the page */
+        
+        visibility: hidden;
+    }
+    #box-4{
+        background-color:rgb(51, 255, 0);
+    }
+   </style>
 </head>
 <body>
+    <!-- visibilty hidden vs display none -->
     <h1>Explore CSS3</h1>
+    <div class="box" id="box-1">box-1</div>
+    <div class="box" id="box-2">box-2</div>
+    <div class="box" id="box-3">box-3</div>
+    <div class="box" id="box-4">box-4</div>
 </body>
 </html>
